[FIXED #107996828] Inline Edit Dropdown arrow icon does not show a hand cursor on mouseover
- assigned z-index attribute of .x-dropdown-action to 3 so that it always stay over
  .x-dropdown-content.
- adjusted the right position attribute of .x-dropdown-content to 32px so that
  it won't cover the dropdown arrow icon.

--- a/src/client/scss/x/_dropdown.scss
+++ b/src/client/scss/x/_dropdown.scss
@@ -14,7 +14,7 @@
 	.x-dropdown-content{
 		display: none;
 		position: absolute;
-		right: 0px;
+		right: 32px;
 		top: 0px;
 		margin-top: $dropdown-height;
 		background-color: #ffffff;
@@ -28,7 +28,7 @@
 		position: absolute;
 		right: 0px;
 		top: 0px;
-		//z-index: 1;
+		z-index: 3;
 		cursor: pointer;
 		line-height: $dropdown-height;
 		padding: 0px $dropdown-offset;
